--- a/Mobile Banking V3/styles/main.css
+++ b/Mobile Banking V3/styles/main.css
@@ -719,11 +719,19 @@ visibility: visible;
 
 #billpayconfirm-button,
 #modalview-submit-button,
-#modalview-back-button {
+#modalview-back-button,
+#modalview-close-button,
+.full-button {
     display: block;
     text-align: center;
     margin: .6em .8em 0;
 }
+
+#modal-appconfig {
+    width: 250px; 
+    height: 28em;    
+}
+
 
 #list-edit-listview .delete {
     display:none;
