--- a/Mobile Banking/styles/main.css
+++ b/Mobile Banking/styles/main.css
@@ -62,7 +62,7 @@ min-height: 33%;
 
 .homechild {
     position: absolute;
-    top: 50%;
+    top: 44%;
   
     height: 30%;
     width: 95%;
@@ -151,14 +151,23 @@ min-height: 33%;
     height:78px;
     margin:0px auto;
 }
+
+
 .titlelogo {
+    background-repeat:no-repeat;
+    min-width:2px;
+    min-height:2px;
+    display:inline-block; 
+}
+
+/*.titlelogo {
     background-image:url(../images/titlelogo22.png);
     background-repeat:no-repeat;
     min-width:22px;
     min-height:22px;
     display:inline-block;  
     margin-bottom: -3px;
-}
+}*/
 
 
 .titlename {
@@ -169,7 +178,21 @@ min-height: 33%;
 .km-ios .km-view-title {
     font-size: 1.35em;
     font-weight: normal;
+    background: rgb(17, 99, 165);
+    color: White;
 }
+
+.km-view-title {
+    font-size: 1.35em;
+    font-weight: normal;
+    background: rgb(17, 99, 165);
+    color: White;
+}
+/*
+.km-flat .km-navbar {
+    background-color: rgb(17, 99, 165);
+    color: White;
+}*/
 
 .errorArea {
     text-align: center;
@@ -227,6 +250,15 @@ min-height: 33%;
 
 
 /* BUTTON STYLES*/
+
+.km-flat .km-button {
+    background-color: #e2e2e2;
+}
+
+.km-flat .km-button:hover {
+    background-color: #cccccc;
+}
+
 .buttonArea {
     text-align: center; 
 }
@@ -464,7 +496,7 @@ visibility: visible;
 }
 
 .banking-account-link {   
-	font-size: .8em;
+	font-size: .85em;
 }
 
 .blue {color: #1266B5;}
@@ -472,20 +504,39 @@ visibility: visible;
 
 #branchesList .item-title {
 	float: left;
-	font-size: .8em;
-    line-height: 1.1em;
+	font-size: .9em;
+    line-height: 1.2em;
     margin: 0;
-    width: 85%;
+    width: 100%;
     color: #1266B5;
 }
 
 #branchesList .item-info {
+    width: 100%;
+    display:block;
 	float: left;
-	font-size: .7em;
+	font-size: .8em;
     font-weight: 100;
 	line-height: 1.2em;
     margin: 2px 0 3px 0;
     color: #111111;
+}
+
+#branchesList .item-info2 {
+    width: 100%;
+	float: left;
+	font-size: .75em;
+    font-weight: 100;
+	line-height: 1.5em;
+    margin: 2px 0 3px 0;
+    color: #111111;
+}
+
+#branchesList .item-info2 .loclable {
+    width: 40%;
+	float: left;
+	display: inline; /*fixes IE float bug*/
+	text-align: right;
 }
 
 #branchesList {
@@ -720,9 +771,9 @@ visibility: visible;
 
 .km-ios .hoursList>li
 {
-    font-size:90%;
+    font-size:70%;
     color: #1266B5;
-    padding: 5px 10px;
+    padding: 3px 10px;
     border:0;
 }
 
@@ -775,8 +826,8 @@ visibility: visible;
 }
 
 #modal-branchhours {
-    width: 95%; 
-    height: 260px;    
+    width: 95%;
+    height: 80%;    
 }
 
 .km-listinset, .km-listgroupinset {
@@ -948,6 +999,23 @@ shim, .km-android .km-popup, .km-android .k-slider, .km-android .km-badge, .km-a
 .km-flat .km-listview-label input[type=checkbox]:checked
 {
     background: rgb(17, 99, 165);
+}
+
+
+label {
+   /* position:relative;z-index:50;*/
+    min-width: 100%;
+}
+
+label:before{
+    position:absolute;
+    content:'';
+    top:-3px;
+    right:-3px;
+    left:-3px;
+    bottom:-3px;
+    outline:1px solid red;
+    z-index:40;
 }
 
 .km-flat .km-filter-wrap > input:focus
